<resources>
    <string name="app_name">Voice Panel</string>
    <string name="text_error_blank_entry">The value should not blank, please enter a valid value</string>
    <string name="toast_code_match">Alarm code matches current code, enter a different code.</string>
    <string name="toast_code_alarm_set">Alarm has been set!</string>
    <string name="toast_code_unchanged">Alarm code unchanged!</string>
    <string name="toast_code_changed">Alarm code changed successfully!</string>
    <string name="toast_code_not_match">Code does not match, try again.</string>
    <string name="toast_code_invalid">Code is invalid, please try again.</string>
    <string name="toast_camera_permission_granted">Camera permission granted.</string>
    <string name="toast_camera_permission_denied">Camera permission not granted.</string>
    <string name="dialog_write_permissions_title">Permissions Required</string>
    <string name="dialog_write_permissions_description">Do you want to grant permission to modify the system settings for screen brightness?</string>
    <string name="toast_write_permissions_denied">Write settings permission denied…</string>
    <string name="toast_write_permissions_granted">Write settings permission granted…</string>
    <string name="toast_qr_code_read">QR Code Read....</string>
    <string name="toast_too_dark_motion">Too dark for motion detection</string>
    <string name="toast_motion_detected">Motion Detected!</string>
    <string name="toast_face_detected">Face Detected!</string>
    <string name="toast_qrcode_read">QR Code %1$s</string>
    <string name="toast_camera_source_error">Could not start camera source, you may want to try again.</string>
    <string name="dialog_title_ssl_error">SSL Certificate Error</string>
    <string name="dialog_message_ssl_continue">Do you want to continue anyway?</string>
    <string name="dialog_message_ssl_not_yet_valid">The certificate is not yet valid.</string>
    <string name="dialog_message_ssl_mismatch">The certificate Hostname is mismatched.</string>
    <string name="dialog_message_ssl_expired">The certificate has expired.</string>
    <string name="dialog_message_ssl_untrusted">The certificate authority is not trusted.</string>
    <string name="dialog_message_ssl_generic">SSL certificate error.</string>
    <string name="dialog_missing_webview_warning">This device does not have the WebView component installed, please install the component from the Google Play store.</string>
    <string name="dialog_connect_mqtt_broker">Please configure your MQTT broker in the settings.  The application will not work without an MQTT connection to Home Assistant.</string>
    <string name="dialog_select_time">Select Time</string>
    <string name="service_notification_title">Voice Panel</string>
    <string name="service_notification_message">Voice Panel Running…</string>
    <string name="title_settings">Settings</string>
    <string name="title_camera_settings">Camera Settings</string>
    <string name="title_mqtt_settings">MQTT Settings</string>
    <string name="title_http_settings">HTTP Settings</string>
    <string name="title_motion_settings">Motion Detection Settings</string>
    <string name="title_facedetection_settings">Face Detection Settings</string>
    <string name="title_qrcode_settings">QR Code Settings</string>
    <string name="title_activity_browser">Browser</string>
    <string name="title_setting_app_deviceid">Device ID</string>
    <string name="title_setting_app_preventsleep">Prevent Screen Sleep</string>
    <string name="title_setting_app_launchurl">Dashboard URL</string>
    <string name="title_setting_app_showactivity">Show Browser Activity</string>
    <string name="title_setting_camera_enabled">Camera Enabled</string>
    <string name="title_setting_camera_cameraid">Selected Camera</string>
    <string name="title_setting_camera_motionenabled">Motion Detection Enabled</string>
    <string name="title_setting_camera_processinginterval">Image Processing Interval (ms)</string>
    <string name="title_setting_camera_motionleniency">Maximum Leniency</string>
    <string name="title_setting_camera_motionminluma">Minimum Luma</string>
    <string name="title_setting_camera_motionwake">Wakes Screen</string>
    <string name="title_setting_camera_motionbright">Screen Brightness</string>
    <string name="title_setting_camera_motionontime">Screen Dim Delay (Seconds)</string>
    <string name="title_setting_camera_faceenabled">Face Detection Enabled</string>
    <string name="title_setting_camera_facewake">Wakes Screen</string>
    <string name="title_setting_camera_qrcodeenabled">QR Code Reader Enabled</string>
    <string name="title_setting_http_restenabled">REST API</string>
    <string name="title_setting_http_port">HTTP Listening Port</string>
    <string name="title_setting_http_mjpegenabled">MJPEG Camera Streaming</string>
    <string name="title_setting_http_mjpegmaxstreams">MJPEG Camera Max Streams</string>
    <string name="title_setting_mqtt_enabled">Enabled MQTT Client</string>
    <string name="title_setting_mqtt_servername">MQTT Broker Address</string>
    <string name="title_setting_mqtt_serverport">Broker Port Number</string>
    <string name="title_setting_mqtt_basetopic">Base Topic</string>
    <string name="title_setting_mqtt_clientid">Client ID</string>
    <string name="title_setting_mqtt_username">Username (Optional)</string>
    <string name="title_setting_mqtt_password">Password (Optional)</string>
    <string name="title_setting_mqtt_sensorfrequency">Publish Frequency (in seconds)</string>
    <string name="title_setting_android_startonboot">Open On Device Boot</string>
    <string name="title_setting_android_browsertype">Specify Browser Engine</string>
    <string name="default_setting_android_browsertype">Auto</string>
    <string name="title_setting_test_zoomlevel">Browser Zoom Level</string>
    <string name="summary_setting_sensors_default">Not available</string>
    <string name="title_setting_sensors_temperature">Temperature</string>
    <string name="title_setting_sensors_light">Light</string>
    <string name="title_setting_sensors_magneticField">Magnetic Field</string>
    <string name="title_setting_sensors_pressure">Pressure</string>
    <string name="title_setting_sensors_humidity">Humidity</string>
    <string name="text_seconds">%1$s seconds</string>
    <string name="title_camera_test">Camera Test</string>
    <string name="button_launch_settings">Launch Settings</string>
    <string name="title_sensor_settings">Sensor Settings</string>
    <string name="title_enable_sensor_data">Enable Sensor Publishing</string>
    <string name="summary_enable_sensor_data">Publishes available device sensor data over MQTT</string>
    <string name="menu_title_help">Help</string>
    <string name="menu_title_dashboard">Dashboard</string>
    <string name="menu_item_help">Help</string>
    <string name="mail_to_subject_text">Feedback</string>
    <string name="mail_subject_text">Send Feedback:</string>
    <string name="thanks_mister_title">Thanks, Mister!</string>
    <string name="designer_developer_text">Design and development</string>
    <string name="company_url_text">thanksmister.com</string>
    <string name="company_email">mister@thanksmister.com</string>
    <string name="text_feedback">Feedback</string>
    <string name="text_rate_application">Rate application</string>
    <string name="text_reddit">Reddit group</string>
    <string name="text_license_information">License information</string>
    <string name="text_github_code">GitHub code</string>
    <string name="error_mqtt_connection">The MQTT client connection wasn\'t established or was closed unexpectedly. Will try to reconnect.</string>
    <string name="error_mqtt_subscription">Couldn\'t subscribe to the MQTT topics, check the MQTT broker settings or your connection.</string>
    <string name="text_android_channel_name">Voice Panel Running</string>
    <string name="pref_title_prevent_sleep">Prevent Screen Sleep</string>
    <string name="pref_summary_prevent_sleep">When active, keeps the screen on.</string>
    <string name="preference_summary_security_code">Set the alarm system code (default is 1234).</string>
    <string name="preference_title_security_code">Security Code</string>
    <string name="preference_title_mqtt_server">MQTT</string>
    <string name="preference_summary_mqtt_server">Set the values for the MQTT service</string>
    <string name="preference_title_broker">MQTT Broker</string>
    <string name="preference_summary_broker">Set MQTT broker service address. For tcp/ssl exclude the prefix (192.168.1.1). For others, include the prefix (http://192.168.1.1).</string>
    <string name="preference_client_id">Client Id</string>
    <string name="preference_summary_client_id">Set the client Id if required by service.</string>
    <string name="preference_tls_connection">SSL/TLS Connection</string>
    <string name="preference_summary_tls_connection">Listen to broker on port 8883 with SSL/TLS.</string>
    <string name="preference_title_port">Service Port</string>
    <string name="preference_summary_port">Set the service port value, usually 8123 unless secure.</string>
    <string name="preference_title_command_topic">Alarm Command</string>
    <string name="preference_title_state_topic">Alarm Topic</string>
    <string name="preference_summary_command_topic">Set the command topic value to send commands to the MQTT service.</string>
    <string name="preference_summary_state_topic">Set the state topic value to receive messages from the MQTT service.</string>
    <string name="preference_title_username">Username</string>
    <string name="preference_summary_username">Set the service username (if needed).</string>
    <string name="preference_title_password">Password</string>
    <string name="preference_summary_password">Set the service password (if needed).</string>
    <string name="preference_title_alarm">Alarm</string>
    <string name="preference_title_display">Display Settings</string>
    <string name="preference_summary_notification">Show a system notification if the alarm is triggered or entry detected.</string>
    <string name="preference_title_system_notifications">System Notifications</string>
    <string name="preference_camera_title">Camera Capture</string>
    <string name="preference_camera_summary">Use the camera to capture an image and send it when the alarm is disabled using Telegram.</string>
    <string name="pref_telegram_title">Telegram</string>
    <string name="pref_telegram_chat_id_summary">Enter your Telegram bot chat id.</string>
    <string name="pref_telegram_token_summary">Enter your Telegram bot API token.</string>
    <string name="pref_telegram_chat_id_title">Telegram Chat Id</string>
    <string name="pref_telegram_api_title">Telegram API Token</string>
    <string name="pref_camera_send_image_notes">You can use Telegram, Mailgun, or both to send captured images.</string>
    <string name="pref_system_sounds_summary">Toggle the alarm alert sound when the alarm is active and entry detected.</string>
    <string name="pref_system_sounds_title">Alarm Sounds</string>
    <string name="pref_night_mode_description">Dims the display and uses a dark theme based on the MQTT sun value, above or below horizon.</string>
    <string name="summary_sun_topic">Example format for the command topic and payload for sun data: \n\n"{\"topic\": \"voicepanel/command\",\"payload\":\"{'sun':'above_horizon'}\"}"</string>
    <string name="preference_title_sun">Sun MQTT</string>
    <string name="pref_fullscreen_title">Fullscreen Mode</string>
    <string name="pref_fullscreen_description">Display application in fullscreen mode.</string>
    <string name="summary_setting_mqtt_basetopic">Identifier to receive MQTT commands for this panel. Each panel should have a unique identifier.</string>
    <string name="pref_title_night_mode">Use Night Mode</string>
</resources>