<!--
  ~ Copyright (c) 2018 ThanksMister LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software distributed
  ~ under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/preferenceView">

    <PreferenceCategory android:title="@string/preference_title_display">

        <SwitchPreference
            android:title="@string/pref_fullscreen_title"
            android:summary="@string/pref_fullscreen_description"
            android:key="pref_full_screen"/>

        <SwitchPreference
            android:defaultValue="@string/default_setting_app_preventsleep"
            android:key="@string/key_setting_app_preventsleep"
            android:title="@string/pref_title_prevent_sleep"
            android:summary="@string/pref_summary_prevent_sleep"/>

        <SwitchPreference
            android:key="pref_day_night_mode"
            android:summary="@string/pref_night_mode_description"
            android:title="@string/pref_title_night_mode"/>

        <EditTextPreference
            android:selectable="false"
            android:summary="@string/summary_sun_topic"
            android:title="@string/preference_title_sun"
            android:textSize="12sp"/>

    </PreferenceCategory>

</PreferenceScreen>