<!--
  ~ Copyright (c) 2018 ThanksMister LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software distributed
  ~ under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/preferenceView">

    <PreferenceCategory android:title="@string/preference_title_alarm">

        <SwitchPreference
            android:defaultValue="@string/default_setting_alarm_enabled"
            android:key="@string/key_setting_alarm_enabled"
            android:title="Enable Alarm"
            android:summary="This will display the current mode of the MQTT alarm panel component."/>

        <Preference
            android:key="pref_alarm_code"
            android:summary="@string/preference_summary_security_code"
            android:title="@string/preference_title_security_code" />

        <EditTextPreference
            android:key="pref_command_topic"
            android:negativeButtonText="@android:string/cancel"
            android:positiveButtonText="@android:string/ok"
            android:summary="@string/preference_summary_command_topic"
            android:title="@string/preference_title_command_topic" />

        <EditTextPreference
            android:key="pref_alarm_topic"
            android:negativeButtonText="@android:string/cancel"
            android:positiveButtonText="@android:string/ok"
            android:summary="@string/preference_summary_state_topic"
            android:title="@string/preference_title_state_topic" />

        <SwitchPreference
            android:key="pref_system_sounds"
            android:summary="@string/pref_system_sounds_summary"
            android:title="@string/pref_system_sounds_title"/>

        <SwitchPreference
            android:key="pref_system_notifications"
            android:summary="@string/preference_summary_notification"
            android:title="@string/preference_title_system_notifications"/>

    </PreferenceCategory>

</PreferenceScreen>