<!--
  ~ Copyright (c) 2018 ThanksMister LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software distributed
  ~ under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <PreferenceCategory android:title="@string/preference_camera_title">

        <CheckBoxPreference
            android:key="pref_module_camera"
            android:summary="@string/preference_camera_summary"
            android:title="@string/preference_camera_title" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_telegram_title">

        <EditTextPreference
            android:key="pref_telegram_chat_id"
            android:negativeButtonText="@android:string/cancel"
            android:positiveButtonText="@android:string/ok"
            android:summary="@string/pref_telegram_chat_id_summary"
            android:title="@string/pref_telegram_chat_id_title"
            android:dependency="pref_module_camera"/>

        <EditTextPreference
            android:key="pref_telegram_token"
            android:negativeButtonText="@android:string/cancel"
            android:positiveButtonText="@android:string/ok"
            android:summary="@string/pref_telegram_token_summary"
            android:title="@string/pref_telegram_api_title"
            android:dependency="pref_module_camera"/>

    </PreferenceCategory>

    <EditTextPreference
        android:paddingTop="0dp"
        android:selectable="false"
        android:summary="@string/pref_camera_send_image_notes"
        android:textColor="@color/light_gray"
        android:textSize="12sp"
        android:dependency="pref_module_camera"/>

</PreferenceScreen>